# gemini-cli-bridge-mcp

./: .gitignore  README.md  pyproject.toml  server.py
scripts/: profile_latency.py
tests/: ask_gemini_integration.py  python_client_test.py  python_harness.py
