[project]
name = "gemini-cli-mcp-py"
version = "0.0.1"
description = "Python MCP server wrapper for the Gemini CLI"
authors = [{ name = "jamubc" }]
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=0.1.0",
]
license = { text = "MIT" }
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]

[tool.hatch.build.targets.sdist]
include = ["server.py"]

[tool.uv]
package = true